# This file should just be used for managing Python dependencies. Making a
# change will cause Docker to reinstall all dependencies. If adding a package
# for a specific puzzle, please add a comment.

[tool.poetry]
name = "tph-site" # FIXME
version = "0.0.0"
description = "FIXME HUNT webapp"
authors = ["teammate"]

# Requirements
[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12"
celery = "^5.3"
channels = "^4.0"
channels-redis = "^4.2"
cryptography = "^42.0"
"discord.py" = "^2.3"
Django = "^5.0"
django-anymail = "^10.2"
django-bleach = "^3.1"
django-extensions = "^3.2"
django-impersonate = "^1.9"
django-phonenumber-field = {version = "^7.3", extras = ["phonenumberslite"]}
django-prometheus = "^2.3"
django-ratelimit = "^4.1"
emoji = "^2.10"
html2text = "==2024.2.25" # doesn't use semver
IMAPClient = "^3.0"
Markdown = "^3.5"
numpy = "^1.26"
pillow = "^10.2" # sync-media
polygenerator = "^0.2.0"
psycopg2-binary = "^2.9"
python-dateutil = "^2.8"
pyyaml = "^6.0"
redis = "^5.0"
requests = "^2.31"
typing-extensions = "^4.10"
ujson = "^5.9"
unidecode = "^1.3"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
whitenoise = {version = "^6.6", extras = ["brotli"]}

# List of optional requirements for full server dependencies
[tool.poetry.extras]
full = []

# Dev Requirements
[tool.poetry.dev-dependencies]
django-silk = "==5.0.1"
pre-commit = "^3.6"
